--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
+    "nanoid": "^5.1.5",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
